samples/_failures_safe/1761793348_9ad386_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8410f3da.c:171:1: error: expected identifier or ‘(’ at end of input
  171 | const
      | ^~~~~
